# TLDR-AI

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  check_ollama_installed.py  cli.py  inference.py  pyproject.toml  stackapi_example.py  stacko_example.py  summarizer_playground.py
.github/workflows/: ci.yml
config/: config.yaml  instruct_3b.yaml  instruct_3b_quantized.yaml  ollama_stable_code.yml  oo_phi_1_5.yaml  refact_1_6.yaml  refact_1_6_no_fetching.yaml
experiment/: run_experiment.py
tests/: test_config_overrides.py  test_main_cli.py  test_model_load.py  test_response_generation.py  test_search_functionality.py  test_verbose_logging.py
tldrai/: cli.py  run.py  run_experiment.py
tldrai/modules/generation_pipeline/: constructed_pipeline.py  gguf_pipeline.py  ollama_pipeline.py  preset_pipeline.py
tldrai/modules/pre_inference/: pre_summarization.py
tldrai/modules/similarity_scoring/: sentence_similarity.py
tldrai/modules/stack_overflow/: fetch.py  pipeline.py  process.py  search.py
tldrai/modules/utils/: gpu.py  logging.py
