[tool.poetry]
name = "tldrai"
version = "0.1.0"
description = ""
authors = ["omalinovskyi <orest0206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^1.26.16"
requests = "^2.29.0"
transformers = "^4.38.1"
accelerate = "^0.27.2"
stackapi = "^0.3.0"
auto-gptq = "^0.7.1"
optimum = "^1.17.1"


[tool.poetry.group.phi-1_5_Wizard_Vicuna_uncensored.dependencies]
einops = "^0.7.0"


[tool.poetry.group.sentence-similarity.dependencies]
sentence-transformers = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
