[tool.poetry]
name = "tldrai"
version = "0.1.0"
description = ""
authors = ["omalinovskyi <orest0206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^1.26.16"
requests = "^2.29.0"
transformers = "^4.38.1"
accelerate = "^0.27.2"
stackapi = "^0.3.0"
auto-gptq = "^0.7.1"
optimum = "^1.17.1"
hydra-core = "^1.3.2"


[tool.poetry.group.phi-1_5_Wizard_Vicuna_uncensored.dependencies]
einops = "^0.7.0"


[tool.poetry.group.sentence-similarity.dependencies]
sentence-transformers = "^2.5.1"



[tool.poetry.group.extract_code_from_stackoverflow_strings.dependencies]
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"


[tool.poetry.group.wandb_experiment_tracking.dependencies]
wandb = "^0.16.4"
gitpython = "^3.1.42"


[tool.poetry.group.gguf_stability_3b.dependencies]
llama-cpp-python = "^0.2.61"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
