[tool.poetry]
name = "tldrai"
version = "0.2.1"
description = ""
authors = ["omalinovskyi <orest0206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stackapi = "^0.3.0"
hydra-core = "^1.3.2"
ollama = "^0.2.1"
beautifulsoup4 = "^4.12.3"
sentence-transformers = "^2.5.1"
click = "^8.1.7"
pandas = "^2.2.2"
lxml = "^5.2.2"

[tool.poetry.scripts]
tldrai = "tldrai.cli:main_cli"

[tool.poetry.group.phi-1_5_Wizard_Vicuna_uncensored]
optional = true
[tool.poetry.group.phi-1_5_Wizard_Vicuna_uncensored.dependencies]
einops = "^0.7.0"

[tool.poetry.group.wandb_experiment_tracking]
optional = true
[tool.poetry.group.wandb_experiment_tracking.dependencies]
wandb = "^0.16.4"
gitpython = "^3.1.42"

[tool.poetry.group.gguf_stability_3b]
optional = true
[tool.poetry.group.gguf_stability_3b.dependencies]
llama-cpp-python = "^0.2.61"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pyinstrument = "^4.6.2"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.urls]
Homepage = "https://github.com/Orest02/TLDR-AI"